[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-33.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-25.png" type="Texture" id=2]
[ext_resource path="res://src/ui/MyButton.gd" type="Script" id=3]
[ext_resource path="res://src/ui/Alert.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/tank-battle.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-26-re.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 156, 98, 1483, 757 )
margin_left = 88.4976
margin_right = 84.391
margin_top = 83.5956
margin_bottom = 83.7915

[node name="Alert" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -527.0
margin_top = -293.0
margin_right = 2092.89
margin_bottom = 663.387
rect_scale = Vector2( 0.4, 0.4 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 88.4976
margin_top = 83.5956
margin_right = 2535.5
margin_bottom = 872.596
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/margin_bottom = -200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 2447.0
margin_bottom = 989.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 2165.0
margin_bottom = 216.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 2447.0
margin_bottom = 226.0
custom_colors/font_color = Color( 0.815686, 0.564706, 0.0823529, 1 )
custom_fonts/font = ExtResource( 5 )
text = "คุณแน่ใจที่ต้องการออกจากเกม?"
align = 1
valign = 1

[node name="ContentLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 2447.0
margin_bottom = 685.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.815686, 0.564706, 0.0823529, 1 )
custom_fonts/font = ExtResource( 5 )
text = "เกมจะจบลงและจะไม่คืนเงินที่ท่านใช้เล่น
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 689.0
margin_right = 2447.0
margin_bottom = 989.0
rect_min_size = Vector2( 0, 300 )
custom_constants/separation = 50
alignment = 1

[node name="Sprite" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 198.0
margin_right = 1198.0
margin_bottom = 300.0
rect_min_size = Vector2( 1000, 300 )
texture = ExtResource( 2 )
expand = true

[node name="OkButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Sprite"]
margin_top = 8.0
margin_right = 800.0
margin_bottom = 308.0
rect_scale = Vector2( 1.24561, 0.950955 )
focus_mode = 1
custom_fonts/font = ExtResource( 5 )
enabled_focus_mode = 1
text = "ตกลง"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/Sprite/OkButton"]
margin_left = 804.0
margin_top = -8.0
margin_right = 1004.0
margin_bottom = 242.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1248.0
margin_right = 2248.0
margin_bottom = 300.0
rect_min_size = Vector2( 1000, 300 )
texture = ExtResource( 6 )
expand = true

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Sprite2"]
margin_top = 8.0
margin_right = 794.0
margin_bottom = 308.0
rect_scale = Vector2( 1.246, 0.951 )
custom_fonts/font = ExtResource( 5 )
text = "ยกเลิก"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
button_type = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Sprite/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Sprite2/CancelButton" to="." method="_on_CancelButton_pressed"]
